[package]
name = "rm-improved"
version = "0.11.2"
authors = ["mail@nivekuil.com"]
description = "rip: a safe and ergonomic alternative to rm"
repository = "https://github.com/nivekuil/rip"
license = "GPL-3.0+"
include = [
    "**/*.rs",
    "Cargo.toml",
]
categories = ["command-line-utilities"]

[dependencies]
clap = "2"
walkdir = "1"
time = "0.1"
error-chain = "0.8"

[profile.release]
lto = true

[[bin]]
name = "rip"
