[package]
name = "rm-improved"
version = "0.12.0"
authors = ["mail@nivekuil.com"]
description = "rip: a safe and ergonomic alternative to rm"
repository = "https://github.com/nivekuil/rip"
readme = "README.org"
license = "GPL-3.0+"
include = [
    "**/*.rs",
    "Cargo.toml",
]
categories = ["command-line-utilities"]
autobins = false

[dependencies]
clap = "2"
walkdir = "1"
time = "0.1"
error-chain = "0.12"

[profile.release]
opt-level = "s"

[[bin]]
name = "rip"
path = "src/main.rs"